add coverage script

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hardhat-project",
   "scripts": {
+    "coverage": "hardhat coverage",
     "test": "hardhat test"
   },
   "devDependencies": {
